--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   flutter_local_notifications: ^17.2.2
   sentry_flutter: ^8.9.0
   cached_network_image: ^3.3.1
-  amazon_payfort: ^1.1.1
+  #amazon_payfort: ^1.1.1
   network_info_plus: ^5.0.3
   webview_flutter: ^4.4.2
   get: ^4.6.6
